# FASTER

cc/: CMakeLists.txt
cc/benchmark-dir/: process_ycsb.cc
